Ensure the snake segments are of higher z-index than the food

--- a/snake.css
+++ b/snake.css
@@ -23,6 +23,7 @@ body {
     width: 31px;
     height: 31px;
     background-color: red;
+
 }
 
 .head {
@@ -30,6 +31,7 @@ body {
     width: 31px;
     height: 31px;
     background-color: blue;
+    z-index: 1;
 }
 
 .segment {
@@ -37,6 +39,7 @@ body {
     width: 31px;
     height: 31px;
     background-color: green;
+    z-index: 1;
 }
 
 .tail {
@@ -44,4 +47,5 @@ body {
     width: 31px;
     height: 31px;
     background-color: yellow;
+    z-index: 1;
 }
